--- a/lw1/2/radix/radix/radix.vcxproj
+++ b/lw1/2/radix/radix/radix.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ff0b1e4f-99c3-4b0f-a70d-3d73422b45f2}</ProjectGuid>
-    <RootNamespace>replace</RootNamespace>
+    <ProjectGuid>{063c41f1-b969-44ed-b17c-e5398bb3cb44}</ProjectGuid>
+    <RootNamespace>radix</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,25 +139,21 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="replace.cpp" />
+    <ClCompile Include="radix.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include=".clang-format" />
     <None Include="test.bat" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="empty-replace-adr-with-123.txt" />
-    <Text Include="empty-replace-nothing-with-nothing.txt" />
-    <Text Include="empty.txt" />
-    <Text Include="fox-replace-dog-with-cat.txt" />
-    <Text Include="fox.txt" />
-    <Text Include="ma-replace-ma-with-mama.txt" />
-    <Text Include="ma.txt" />
-    <Text Include="numbers-replace-1231234-with-zamena.txt" />
-    <Text Include="numbers.txt" />
+    <Text Include="10-10-10.txt" />
+    <Text Include="36-2-ZZZ.txt" />
+    <Text Include="digit-of-another-number-system.txt" />
+    <Text Include="incorrect-char.txt" />
+    <Text Include="incorrect-number-system.txt" />
+    <Text Include="overflow.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
