--- a/lw4/VolumetricBodies/ValometricBodies_tests/ValometricBodies_tests.vcxproj
+++ b/lw4/VolumetricBodies/ValometricBodies_tests/ValometricBodies_tests.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{67391aba-732c-487e-a5ec-f270c3da56fb}</ProjectGuid>
-    <RootNamespace>invert</RootNamespace>
+    <ProjectGuid>{e9b3c859-1937-46b6-b2ce-be25ca136189}</ProjectGuid>
+    <RootNamespace>ValometricBodiestests</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>VolumetricBodies_tests</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -82,7 +83,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>test.bat "$(TargetPath)"</Command>
+      <Command>"$(TargetPath)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -101,7 +102,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>test.bat "$(TargetPath)"</Command>
+      <Command>"$(TargetPath)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -116,7 +117,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>test.bat "$(TargetPath)"</Command>
+      <Command>"$(TargetPath)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -135,31 +136,28 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>test.bat "$(TargetPath)"</Command>
+      <Command>"$(TargetPath)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="invert.cpp" />
+    <ClCompile Include="..\VolumetricBodies\BodyController.cpp" />
+    <ClCompile Include="..\VolumetricBodies\CBody.cpp" />
+    <ClCompile Include="..\VolumetricBodies\CCompound.cpp" />
+    <ClCompile Include="..\VolumetricBodies\CCone.cpp" />
+    <ClCompile Include="..\VolumetricBodies\CCylinder.cpp" />
+    <ClCompile Include="..\VolumetricBodies\CParallelepiped.cpp" />
+    <ClCompile Include="..\VolumetricBodies\CSphere.cpp" />
+    <ClCompile Include="ValometricBodies_tests.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="test.bat" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="testMatrix1.txt" />
-    <Text Include="testMatrix2.txt" />
-    <Text Include="testMatrix3.txt" />
-    <Text Include="testMatrix4.txt" />
-    <Text Include="testMatrix5.txt" />
-    <Text Include="testMatrix6.txt" />
-    <Text Include="testMatrixOut1.txt" />
-    <Text Include="testMatrixOut2.txt" />
-    <Text Include="testMatrixOut3.txt" />
-    <Text Include="testMatrixOut4.txt" />
-    <Text Include="testMatrixOut5.txt" />
-    <Text Include="testMatrixOut6.txt" />
+    <ClInclude Include="..\VolumetricBodies\BodyController.h" />
+    <ClInclude Include="..\VolumetricBodies\CBody.h" />
+    <ClInclude Include="..\VolumetricBodies\CCompound.h" />
+    <ClInclude Include="..\VolumetricBodies\CCone.h" />
+    <ClInclude Include="..\VolumetricBodies\CCylinder.h" />
+    <ClInclude Include="..\VolumetricBodies\CParallelepiped.h" />
+    <ClInclude Include="..\VolumetricBodies\CSphere.h" />
+    <ClInclude Include="..\VolumetricBodies\stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
