--- a/lw4/VolumetricBodies/VolumetricBodies/VolumetricBodies.vcxproj
+++ b/lw4/VolumetricBodies/VolumetricBodies/VolumetricBodies.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{67391aba-732c-487e-a5ec-f270c3da56fb}</ProjectGuid>
-    <RootNamespace>invert</RootNamespace>
+    <ProjectGuid>{8bfe221f-d8ed-4304-9bac-2d6c56f5db12}</ProjectGuid>
+    <RootNamespace>VolumetricBodies</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -81,9 +81,6 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <PostBuildEvent>
-      <Command>test.bat "$(TargetPath)"</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -100,9 +97,6 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <PostBuildEvent>
-      <Command>test.bat "$(TargetPath)"</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -115,9 +109,6 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <PostBuildEvent>
-      <Command>test.bat "$(TargetPath)"</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -134,32 +125,26 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <PostBuildEvent>
-      <Command>test.bat "$(TargetPath)"</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="invert.cpp" />
+    <ClCompile Include="BodyController.cpp" />
+    <ClCompile Include="CBody.cpp" />
+    <ClCompile Include="CCompound.cpp" />
+    <ClCompile Include="CCone.cpp" />
+    <ClCompile Include="CCylinder.cpp" />
+    <ClCompile Include="CParallelepiped.cpp" />
+    <ClCompile Include="CSphere.cpp" />
+    <ClCompile Include="VolumetricBodies.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BodyController.h" />
+    <ClInclude Include="CBody.h" />
+    <ClInclude Include="CCompound.h" />
+    <ClInclude Include="CCone.h" />
+    <ClInclude Include="CCylinder.h" />
+    <ClInclude Include="CParallelepiped.h" />
+    <ClInclude Include="CSphere.h" />
     <ClInclude Include="stdafx.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="test.bat" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="testMatrix1.txt" />
-    <Text Include="testMatrix2.txt" />
-    <Text Include="testMatrix3.txt" />
-    <Text Include="testMatrix4.txt" />
-    <Text Include="testMatrix5.txt" />
-    <Text Include="testMatrix6.txt" />
-    <Text Include="testMatrixOut1.txt" />
-    <Text Include="testMatrixOut2.txt" />
-    <Text Include="testMatrixOut3.txt" />
-    <Text Include="testMatrixOut4.txt" />
-    <Text Include="testMatrixOut5.txt" />
-    <Text Include="testMatrixOut6.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
